Update api get liked photo